--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
           </div>
           <article class="cartao">
             <div class="cartao__conteudo">
-            <h3>Programação</h3>
-            <div class="cartao__conteudo__pergunta">
-            O que é CSS?
-            </div>
-            <div class="cartao__conteudo__resposta">
-            O CSS é uma linguagem de estilização.
+              <h3>Geografia</h3>
+              <div class="cartao__conteudo__pergunta">
+              <p>Qual a capital da França?</p>
+              </div>
+              <div class="cartao__conteudo__resposta">
+              <p>A capital da França é Paris</p>
             </div>
             </div>
             </article>         
